--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Message Display</title>
+    <title>Discord Message Display</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -12,6 +12,25 @@
         }
         h1 {
             color: #333;
+        }
+        textarea {
+            width: 100%;
+            padding: 10px;
+            font-size: 16px;
+            border-radius: 5px;
+            border: 1px solid #ddd;
+            margin-bottom: 10px;
+        }
+        button {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #45a049;
         }
         .messages {
             margin-top: 20px;
@@ -33,8 +52,14 @@
 
     <h1>Messages from Discord</h1>
 
+    <form id="sendMessageForm">
+        <textarea id="userMessage" placeholder="Type your message..." rows="4" cols="50"></textarea><br><br>
+        <button type="submit">Send to Discord</button>
+    </form>
+
+    <h2>Discord Messages:</h2>
     <div id="messagesContainer" class="messages">
-        <!-- Messages from Discord bot will be inserted here -->
+        <!-- Messages will be displayed here -->
     </div>
 
     <script src="script.js"></script>
